--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -7,6 +7,14 @@
     <input [(ngModel)]="country.code" placeholder="code">
   </label>
 </div>
+<!--<div class="dropdown">
+  <button onclick="getCountries()" class="dropbtn">Country Names</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>-->
 <!--<div><span>Id: </span>{{country.id}}</div>
 <div><span>Code: </span>{{country.code}}</div>
 <div><span>Name: </span>{{country.name}}</div>-->
