--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,20 +1,23 @@
-<h2>{{counrty.name | uppercase}}</h2>
+<!--<h2>{{country.name | uppercase}}</h2>-->
 <div>
   <label>Name:
-    <input [(ngModel)]="country.name" placeholder="name">
+    <input [(ngModel)]="country.name" placeholder="Enter Country Name">
   </label>
   <label> Code:
-    <input [(ngModel)]="country.code" placeholder="code">
+    <input [(ngModel)]="country.code" placeholder="Enter Country Code">
+  </label>
+  <label>
+    <button onclick="addCountry()" class="addbtn">Add Country</button>
   </label>
 </div>
-<!--<div class="dropdown">
-  <button onclick="getCountries()" class="dropbtn">Country Names</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-</div>-->
+
+<div>
+  <label>Name: 
+    <select>
+      <option value="default">Select Country Name</option>
+    </select>
+  </label>
+</div>
 <!--<div><span>Id: </span>{{country.id}}</div>
 <div><span>Code: </span>{{country.code}}</div>
 <div><span>Name: </span>{{country.name}}</div>-->
