WIP: Add pages to navigate between

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     {{ title }}!
   </h1>
   <nav>
+    <a routerLink="/home-page">Countries Home Page</a>
     <a routerLink="/add">Add Countries</a>
   </nav>
   <!--<router-outlet></router-outlet>-->
