--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,4 +20,25 @@ body, input{
 /* everywhere else */
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #C70039;
 }
+nav a {
+    padding: 5px 10px;
+    text-decoration: none;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    display: inline-block;
+    background-color: #FFDAB9;
+    border-radius: 4px;
+  }
+  nav a:visited, a:link {
+    color: #FFB6C1;
+  }
+  nav a:hover {
+    color: 	#FFB6C1;
+    background-color: #900C3F;
+  }
+  nav a.active {
+    color: #900C3F;
+  }
