--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 /* Application-wide Styles */
 
 h1 {
-    color: #FF5733;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #900C3F;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 250%;
 }
 h2, h3 {
@@ -20,7 +20,6 @@ body, input{
 /* everywhere else */
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #C70039;
 }
 nav a {
     padding: 5px 10px;
@@ -29,16 +28,16 @@ nav a {
     margin-right: 20px;
     margin-bottom: 20px;
     display: inline-block;
-    background-color: #FFDAB9;
+    background-color: #FFB6C1;
     border-radius: 4px;
   }
-  nav a:visited, a:link {
-    color: #FFB6C1;
-  }
-  nav a:hover {
-    color: 	#FFB6C1;
-    background-color: #900C3F;
-  }
-  nav a.active {
-    color: #900C3F;
-  }
+nav a:visited, a:link {
+color: #900C3F;
+}
+nav a:hover {
+color: 	#FFB6C1;
+background-color: #900C3F;
+}
+nav a.active {
+color: #900C3F;
+}
