--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -32,15 +32,21 @@ nav a {
     border-radius: 4px;
   }
 nav a:visited, a:link {
-color: #900C3F;
+    color: #900C3F;
 }
 nav a:hover {
-color: 	#FFB6C1;
-background-color: #900C3F;
+    color: 	#FFB6C1;
+    background-color: #900C3F;
 }
 nav a.active {
-color: #900C3F;
+    color: #900C3F;
 }
-label addbtn {
-    margin-left: 10px;
+button {
+    cursor: pointer;
+    border-radius: 2px;
+    margin-left: 5px;
+}
+button:hover {
+    background-color: #900C3F;
+    color: #FFB6C1;
 }
