--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h2>Add a New Country</h2>
   <label>Name:
     <input #countryName placeholder="Enter Country Name">
   </label>
@@ -9,8 +10,19 @@
     <button (click)="add(countryName.value,countryCode.value); countryName.value=''; countryCode.value=''">Add Country</button>
   </label>
 </div>
-
-
+<div>
+  <h2>Add a New State</h2>
+  <label>Name:
+    <input #stateName placeholder="Enter State Name">
+  </label>
+  <label>State Code:
+    <input #stateCode placeholder="Enter State Code">
+  </label>
+  <label>Country Code:
+    <input #coCountryCode placeholder="Enter Corresponding Country Code" (input)="coCountryCode.code=$event.target.value">
+  </label>
+  <button (click)="addS(stateName.value,stateCode.value,coCountryCode.value); stateName.value=''; stateCode.value=''; coCountryCode.value=''">Add State</button>
+</div>
 
 
 
