--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -6,12 +6,17 @@ h1 {
     font-size: 250%;
 }
 h2, h3 {
-    color: #C70039;
+    color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: lighter;
+    font-size: 30px;
+    border-radius: 4px;
+    background-color: #0F8A5F;
+    font-stretch: ultra-expanded;
+    font-variant: small-caps;
+    font-weight: italic;
 }
 body {
-    margin: 2em;
+    margin: 0;
 }
 body, input{
     color: #900C3F;
@@ -19,34 +24,29 @@ body, input{
 }
 /* everywhere else */
 * {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-nav a {
-    padding: 5px 10px;
-    text-decoration: none;
-    margin-top: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    display: inline-block;
-    background-color: #FFB6C1;
+    font-family: Georgia, 'cursive', 'Times New Roman', Times, serif;
+    font-size: 20px;
     border-radius: 4px;
-  }
-nav a:visited, a:link {
-    color: #900C3F;
-}
-nav a:hover {
-    color: 	#FFB6C1;
-    background-color: #900C3F;
-}
-nav a.active {
-    color: #900C3F;
+    font-stretch: ultra-expanded;
+    font-variant: small-caps;
+    font-weight: bold;
 }
 button {
     cursor: pointer;
-    border-radius: 2px;
     margin-left: 5px;
+    background-color: #d42426;
+    color: white;
+    display: inline-block;
 }
 button:hover {
-    background-color: #900C3F;
-    color: #FFB6C1;
+    background-color: #0F8A5F;
+    color: white;
+}
+input {
+    margin-right: 7px;
+
+}
+select {
+    color: gray;
+    font-size: 20px;
 }
