--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -19,8 +19,12 @@ body, input{
 }
 /* everywhere else */
 * {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgb(0, 0, 0);
+    font-family: Georgia, 'cursive', 'Times New Roman', Times, serif;
+    font-size: 20px;
+    border-radius: 4px;
+    font-stretch: ultra-expanded;
+    font-variant: small-caps;
+    font-weight: bold;
 }
 nav a {
     padding: 5px 10px;
@@ -31,14 +35,17 @@ nav a {
     display: inline-block;
     background-color: #900C3F;
     border-radius: 4px;
-  }
-  nav a:visited, a:link {
+}
+nav a:visited, a:link {
     color: #900C3F;
-  }
-  nav a:hover {
+}
+nav a:hover {
     color: 	#FFB6C1;
     background-color: #900C3F;
-  }
-  nav a.active {
+}
+nav a.active {
     color: #900C3F;
-  }
+}
+select {
+    margin-right: 7px;
+}
